fix burger on safari

--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -102,8 +102,9 @@
 }
 
 /* Icon 1 */
-
 .navIcon {
+  background: transparent;
+  border: none;
   width: 30px;
   position: absolute;
   top: 20px;
